other/a/add-ndots/pod-resources-patched.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
  namespace: add-ndots
spec:
  dnsConfig:
    options:
      - name: ndots
        value: "1"
  containers:
  - name: bb
    image: busybox:1.35
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
  namespace: add-ndots
spec:
  dnsConfig:
    options:
      - name: ndots
        value: "1"
  containers:
  - name: bb
    image: busybox:1.35
