other/a/add-ndots/podcontroller-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: busybox
  name: deployment01
  namespace: add-ndots
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  strategy: {}
  template:
    metadata:
      labels:
        app: busybox
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "4"
      containers:
      - name: bb
        image: busybox:1.35
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: cronjob01
  namespace: add-ndots
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          dnsConfig:
            options:
              - name: ndots
                value: "4"
          containers:
          - name: bb
            image: busybox:1.35
          restartPolicy: OnFailure
